# shmup

./: .clang-format  CMakeLists.txt  README.md  main.cpp
dependencies/: CMakeLists.txt
src/BulletPattern/: BulletPattern.cpp  BulletPattern.h
src/BulletPattern/Bullet/: Bullet.cpp  Bullet.h
src/BulletPattern/BulletDesigner/: BulletDesigner.cpp  BulletDesigner.h
src/Game/: Game.cpp  Game.h
src/Menus/: Menus.cpp  Menus.h
src/OptionsMenu/: Options.cpp  Options.h
src/Point/: Point.cpp  Point.h
src/utils/: bezierUtils.cpp  bezierUtils.h
